Bugfix client connection